# GE-Vernova-Grid

./: main.py  pyproject.toml  render.yaml  requirements.txt  train_fault_classifier.py
api/: main.py  model_loader.py  schemas.py
api/routes/: alerts.py  explain.py  fault_type.py  predict.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Alerts.jsx  Dashboard.jsx  FaultClassifier.jsx  Predict.jsx  Sidebar.jsx
frontend/src/lib/: api.js
ml/: explainability.py  hybrid.py  isolation_forest.py  lstm_model.py  preprocess.py
models/: feature_col_order.pkl  feature_scaler.pkl  lstm_best.pt  lstm_metadata.json  scaler.pkl  threshold.txt
notebooks/: notebook.ipynb
tests/: payload.json
